[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Timeline/FrameTagDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/timeline/new_frame.png" type="Texture2D" id=2]

[node name="FrameTagDialog" type="AcceptDialog"]
offset_right = 83.0
offset_bottom = 58.0
custom_minimum_size = Vector2( 400, 200 )
window_title = "Frame Tag Properties"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_right = 384.0
offset_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxTagContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
offset_right = 384.0
offset_bottom = 28.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxTagContainer"]
offset_right = 384.0
offset_bottom = 4.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddTag" type="Button" parent="VBoxContainer/ScrollContainer/VBoxTagContainer" groups=["UIButtons"]]
offset_top = 8.0
offset_right = 20.0
offset_bottom = 28.0
custom_minimum_size = Vector2( 20, 0 )
tooltip_text = "Add a new frame tag"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxTagContainer/AddTag"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayOnlyTags" type="CheckBox" parent="VBoxContainer"]
offset_top = 132.0
offset_right = 333.0
offset_bottom = 156.0
tooltip_text = "If it's selected, the animation plays only on the frames that have the same tag.
If it's not, the animation will play for all frames, ignoring tags."
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
pressed = true
text = "Animation plays only on frames of the same tag"

[node name="TagOptions" type="ConfirmationDialog" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 164.0

[node name="GridContainer" type="GridContainer" parent="TagOptions"]
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 120.0
theme_override_constants/v_separation = 8
theme_override_constants/h_separation = 8
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="TagOptions/GridContainer"]
offset_top = 5.0
offset_right = 42.0
offset_bottom = 19.0
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="TagOptions/GridContainer"]
offset_left = 50.0
offset_right = 124.0
offset_bottom = 24.0
caret_blink = true
caret_blink_interval = 0.5

[node name="ColorLabel" type="Label" parent="TagOptions/GridContainer"]
offset_left = 132.0
offset_top = 5.0
offset_right = 169.0
offset_bottom = 19.0
text = "Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="TagOptions/GridContainer"]
offset_left = 177.0
offset_right = 251.0
offset_bottom = 24.0
mouse_default_cursor_shape = 2
color = Color( 1, 0, 0, 1 )

[node name="FromLabel" type="Label" parent="TagOptions/GridContainer"]
offset_top = 37.0
offset_right = 42.0
offset_bottom = 51.0
text = "From:"

[node name="FromSpinBox" type="SpinBox" parent="TagOptions/GridContainer"]
offset_left = 50.0
offset_top = 32.0
offset_right = 124.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0
allow_greater = true

[node name="ToLabel" type="Label" parent="TagOptions/GridContainer"]
offset_left = 132.0
offset_top = 37.0
offset_right = 169.0
offset_bottom = 51.0
text = "To:"

[node name="ToSpinBox" type="SpinBox" parent="TagOptions/GridContainer"]
offset_left = 177.0
offset_top = 32.0
offset_right = 251.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0
allow_greater = true

[connection signal="about_to_popup" from="." to="." method="_on_FrameTagDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_FrameTagDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxTagContainer/AddTag" to="." method="_on_AddTag_pressed"]
[connection signal="toggled" from="VBoxContainer/PlayOnlyTags" to="." method="_on_PlayOnlyTags_toggled"]
[connection signal="confirmed" from="TagOptions" to="." method="_on_TagOptions_confirmed"]
[connection signal="custom_action" from="TagOptions" to="." method="_on_TagOptions_custom_action"]
[connection signal="popup_hide" from="TagOptions" to="." method="_on_TagOptions_popup_hide"]
